force-app/main/default/objects/DHS_Deliverable__c/fields/Case_List__c.field-meta.xml
<CustomField>
    <fullName>Case_List__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>