force-app/main/default/objects/DHS_Deliverable__c/fields/DHS_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>DHS_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DHS_Requested_Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>