force-app/main/default/objects/DHS_Deliverable__c/fields/Requested_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date_Time__c</fullName>
    <label>Requested Date/Time</label>
    <type>DateTime</type>
</CustomField>