force-app/main/default/objects/DHS_Deliverable__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Version Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>